feat: play surah functionality && create read, listen, notes and podcast static pages

--- a/app/globals.css
+++ b/app/globals.css
@@ -312,6 +312,12 @@
     .flex-between {
         @apply flex justify-between items-center;
     }
+    .w-13 {
+        width: 3.125rem;
+    }
+    .h-13 {
+        height: 3.125rem;
+    }
 }
 
 /* Selection styling */
